# nlsql

./: .gitignore  LICENSE  README.md  USAGE.md  helpers.py  main.py  pyproject.toml  requirements.txt
ai_assistant/: groq.py  local_llm.py
api/: server.py
db/: psql.py
nlsql/: helpers.py  main.py
nlsql/api/: server.py
nlsql/db/: psql.py
nlsql/prompts/: text_to_sql_prompt.py
prompts/: text_to_sql_prompt.py
